syntax="proto3";

option go_package="./pb";

package proto;

message PublishRequest {
    string queue_name = 1;
    string body = 2;
}